tests/paczka1/small_fuzzy/57218303.err
Error in line 4: rbUd4baHR A873 6,0
Error in line 3: XSz9k A873 12,7
